--- a/main.html
+++ b/main.html
@@ -1,16 +1,46 @@
 <!DOCTYPE html>
-
 <html>
+	<head>
+		<link rel="stylesheet" href="styles.css">
+	</head>
+	<body>
+        <form method="post">
+		    <label for="name">Name</label>
+            <input type="text" required id="name" placeholder="Name">
 
-<head>
-	<link rel="stylesheet" href="styles.css">
-</head>
+            <label for="email">Email</label>
+            <input type="email" required id="email" placeholder="Email">
 
-<body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+            <label for="gender_m">Gender</label>
+            <input type="radio" required id="gender_m" name="gender">Male
+            <input type="radio" required id="gender_f" name="gender">Female
+        
+            <label for="select">Car Brands</label>
+            <select required id="cars">
+                <option>--Please choose an option--</option>
+                <option>BMW</option>
+                <option>Audi</option>
+            </select>
 
-</body>
+            <label for="age">Age</label>
+            <input type="number" required id="age" placeholder="Age">
 
+            <label for="dob">DOB</label>
+            <input type="date" required id="dob">
+
+            <label for="tel">Phone Number</label>
+            <input type="tel" id="tel" placeholder="xxx-xxx-xxxx">
+
+            <label for="password">Password</label>
+            <input type="password" required id="password" placeholder="Password">
+
+            <input type="checkbox" required id="tos">
+            <label for="name">I agree to the TOS</label>
+
+            <button type="button" id="submit" value="submit">Submit</button>
+        </form>
+        <!-- the entire body must be written by student -->
+    	<script type="text/javascript" src="./script.js">
+		</script>
+	</body>
 </html>
