--- a/main.html
+++ b/main.html
@@ -37,7 +37,7 @@
             <input type="password" required id="password" name="password" placeholder="Password">
 
             <input type="checkbox" required id="tos" name="tos">
-            <label for="name">I agree to the TOS</label>
+			<label for="tos">I agree to the TOS</label>
 
             <button type="submit" id="submit" value="Submit">Submit</button>
         </form>
