--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-        <form method="post">
+			<form method="post" action="https://httpbin.org/post">
 		    <label for="name">Name</label>
             <input type="text" required id="name" name="name" placeholder="Name">
 
