--- a/main.html
+++ b/main.html
@@ -1,48 +1,55 @@
 <!DOCTYPE html>
+
 <html>
-	<head>
-		<link rel="stylesheet" href="styles.css">
-	</head>
-	<body>
-			<form method="post" action="https://httpbin.org/post">
-		    <label for="name">Name</label>
-            <input type="text" required id="name" name="name" placeholder="Name">
 
-            <label for="email">Email</label>
-            <input type="email" required id="email" name="email" placeholder="Email">
+<head>
+	<link rel="stylesheet" href="styles.css">
+</head>
 
-			<label>Gender</label>
-            <label for="gender_m">
-			<input type="radio" required id="gender_m" name="gender">Male</label>
-            <label for="gender_f">
-			<input type="radio" required id="gender_f" name="gender">Female</label>
-        
-            <label for="select">Car Brands</label>
-            <select required id="cars" name="cars">
-                <option>--Please choose an option--</option>
-                <option>BMW</option>
-                <option>Audi</option>
-            </select>
+<body>
+	<form action="" method="post">
+          <label for="name">Name*</label>
+		  <input type="text" name="name" id="name" placeholder="Name" required>
+		  <br>
+		  <label for="email">Email*</label>
+		  <input type="email" name="email" id="email" placeholder="Email" required>
+		  <br>
+		  <label for="gender">Gender*</label>
+		  <label for="Male">Male</label>
+		  <input type="radio" name="gender" id="gender_m" required>
+		  <label for="Female">Female</label>
+		  <input type="radio" name="gender" id="gender_m" required>
+		  <br>
+		  <label for="cars">Car Brands*</label>
+		  <select name="cars" id="cars">
+			<option value="--Please choose an option--" disabled selected>--Please choose an option--</option>
+			<option id="cars" value="BMW" required>BMW</option>
+			<option id="cars" value="Audi" required>Audi</option>
+			<option id="cars" value="Mercedez" required>Mercedez</option>
+		  </select>
+		  <br>
+		  <label for="age">Age*</label>
+		  <input type="date" name="age" id="age" placeholder="Age" required>
+		  <br>
+		  <label for="dob">DOB*</label>
+		  <input type="date" name="dob" id="dob" required>
+		  <br>
+		  <label for="tel">Phone Number</label>
+		  <input type="tel" name="tel" id="tel" placeholder="xxx-xxx-xxxx">
+		  <br>
+		  <label for="password">Password*</label>
+		  <input type="password" name="password" placeholder="password" id="password" required>
+		  <br>
+		  <label for="tos">Checkbox*</label>
+		  <input type="checkbox" name="tos" id="tos" required>
+		  <label for="tos">I agree to the TOS</label>
+		  <br>
+		  <button type="submit">submit</button>
+	</form>
+	<!-- the entire body must be written by student -->
+    <script type="text/javascript" src="./script.js">
+</script>
 
-            <label for="age">Age</label>
-            <input type="number" required id="age" name="age" placeholder="Age">
+</body>
 
-            <label for="dob">DOB</label>
-            <input type="date" required id="dob" name="dob">
-
-            <label for="tel">Phone Number</label>
-            <input type="tel" id="tel" placeholder="xxx-xxx-xxxx" name="tel">
-
-            <label for="password">Password</label>
-            <input type="password" required id="password" name="password" placeholder="Password">
-
-            <input type="checkbox" required id="tos" name="tos">
-			<label for="tos">I agree to the TOS</label>
-
-            <button type="submit" id="submit" value="Submit">Submit</button>
-        </form>
-        <!-- the entire body must be written by student -->
-    	<script type="text/javascript" src="./script.js">
-		</script>
-	</body>
 </html>
